--- a/src/styles/estilosGlobais.scss
+++ b/src/styles/estilosGlobais.scss
@@ -20,3 +20,17 @@ body {
     background-color: #154580;
     border-radius: 20px;
   }
+
+  @font-face {
+    font-family: "GandhiSansRegular";
+    src: url("../assets/fontes/GandhiSans-Regular.otf") format("truetype");
+    font-weight: 500;
+    display:  swap;
+  }
+  
+  @font-face {
+    font-family: "GandhiSansBold";
+    src: url("../assets/fontes/GandhiSans-Bold.otf") format("truetype");
+    font-weight: 700;
+    display:  swap;
+  }
